--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Website Design</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/df75d5028c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/tw.css">
 </head>
@@ -18,20 +18,20 @@
     <header>
         <nav class="nav-bar">
             <div class="left">
-                <img src="Images/Group 40071 (2).png" alt="">
+                <img class="nav-img" src="Images/Group 40071 (2).png" alt="">
                 <h1 class="left-a">Hero <span style="color: var(--pri-co);">Travel</span></h1>
             </div>
             <div class="right">
-                <a class="right-a"  href=""><span style="color: var(--pri-co); font-weight: 700;" >Home</span></a>
+                <a class="right-a" href=""><span style="color: var(--pri-co); font-weight: 700;">Home</span></a>
                 <a class="right-a" href="">Packages</a>
                 <a class="right-a" href="">Testimonial</a>
                 <a class="right-a" href="">Blog</a>
                 <a class="right-a" href="">Contact</a>
             </div>
             <div class="right-b">
-                <a  href=""><i class="fa-solid fa-bars"></i>
+                <a href=""><i class="fa-solid fa-bars"></i>
                     <ul class="right-b-a">
-                        <li><a href=""><span style="color: var(--pri-co); font-weight: 700;" >Home</span></a></li>
+                        <li><a href=""><span style="color: var(--pri-co); font-weight: 700;">Home</span></a></li>
                         <li><a href="">Packages</a></li>
                         <li><a href="">Testimonial</a></li>
                         <li><a href="">Blog</a></li>
@@ -44,7 +44,8 @@
             <div class="banner-text-selector">
                 <div class="banner-text">
                     <h1 class="banner-text-a">Explore Your Travel</h1>
-                    <p class="banner-text-b">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+                    <p class="banner-text-b">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+                        adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
                 </div>
                 <div class="banner-selector">
                     <input class="b-s-a" type="text" name="" id="" placeholder="Where go">
@@ -55,18 +56,31 @@
                         <option value="">Select Type</option>
                     </select>
                     <button class="btn-primary"><i class="fa-solid fa-magnifying-glass"></i>
-                    Find Now</button>
+                        Find Now</button>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <div class="text-sesction">
-
-        </div>
-        <div class="image-section">
-            
-        </div>
+        <section class="second-page">
+            <div class="text-section">
+                <h1 class="left-a">Our Popular Tours</h1>
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec nibh pellentesque.</p>
+                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
+                    .</li>
+                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
+                    nullam.</li>
+                <li class="s-p-a"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <button id="s-p-btn" >Read More</button>
+            </div>
+            <div class="image-section">
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
