--- a/index.html
+++ b/index.html
@@ -65,22 +65,44 @@
         <section class="second-page">
             <div class="text-section">
                 <h1 class="left-a">Our Popular Tours</h1>
-                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst
                     nec nibh pellentesque.</p>
-                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
+                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam.
+                    Sociis erat at
                     .</li>
-                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
+                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                    suspendisse
                     nullam.</li>
                 <li class="s-p-a"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
                 <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus
                     ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
                     natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
-                <button id="s-p-btn" >Read More</button>
+                <button id="s-p-btn">Read More</button>
             </div>
             <div class="image-section">
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
         </section>
+        <section class="third-page">
+            <div class="text-div">
+                <h1 class="left-a">Choose Your Destination</h1>
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="image-div">
+                <a href="" class="bangladesh">Bangladesh</a>
+                <a href="" class="bandarban">Bandarban</a>
+                <a href="" class="srilanka">Srilanka</a>
+                <a href="" class="north-america">North America</a>
+                <a href="" class="kashmir">Kashmir</a>
+                <a href="" class="maldives">Maldives</a>
+                <a href="" class="indonesia">Indonesia
+                </a>
+
+            </div>
+        </section>
+
     </main>
     <footer>
 
