Forth page done

--- a/index.html
+++ b/index.html
@@ -64,21 +64,18 @@
     <main>
         <section class="second-page">
             <div class="text-section">
-                <h1 class="left-a">Our Popular Tours</h1>
-                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                    Sodales dictumst
+                <h1 class="t-s-a">Our Popular Tours</h1>
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
                     nec nibh pellentesque.</p>
-                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam.
-                    Sociis erat at
+                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
                     .</li>
-                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
-                    suspendisse
+                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
                     nullam.</li>
                 <li class="s-p-a"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
                 <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus
                     ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
                     natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
-                <button id="s-p-btn">Read More</button>
+                <button id="s-p-btn" >Read More</button>
             </div>
             <div class="image-section">
                 <img src="Images/Rectangle 4.png" alt="">
@@ -86,23 +83,68 @@
         </section>
         <section class="third-page">
             <div class="text-div">
-                <h1 class="left-a">Choose Your Destination</h1>
-                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                    Sodales dictumst nec nibh pellentesque.</p>
+                <h1 class="t-s-a">Choose Your Destination</h1>
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
             <div class="image-div">
-                <a href="" class="bangladesh">Bangladesh</a>
-                <a href="" class="bandarban">Bandarban</a>
-                <a href="" class="srilanka">Srilanka</a>
-                <a href="" class="north-america">North America</a>
-                <a href="" class="kashmir">Kashmir</a>
-                <a href="" class="maldives">Maldives</a>
-                <a href="" class="indonesia">Indonesia
-                </a>
-
+                <div class="b-b">
+                    <div class="bangladesh">
+                        <p class="bang-t">Bangladesh</p> 
+                    </div>
+                    <div class="bandarban">
+                        <p class="band-t">Bandarban</p>
+                    </div>
+                </div>
+                <div class="s-n-k">
+                    <div class="srilanka">
+                        <p class="sr-t">Srilanka</p>
+                    </div>
+                    <div class="north-america">
+                        <p class="na-t">North America</p>
+                    </div>
+                    <div class="kashmir">
+                        <p class="ka-t">Kashmir</p>
+                    </div>
+                </div>
+                <div class="m-i">
+                    <div class="maldives">
+                        <p class="ma-t">Maldives</p>
+                    </div>
+                    <div class="indonesia">
+                        <p class="in-t">Indonesia</p>
+                    </div>
+                </div>
             </div>
         </section>
+        <section class="forth-page">
+            <div class="why-choose-us">
+                <h1 class="t-s-a">
+                    Why Choose Us
+                </h1>
+                <p id="w-c-u-p" class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="hotel-map">
+                <div class="hotel">
+                    <img class="f-icon" src="Images/hotel.png" alt="">
+                    <h4 class="h-head">Handpicked Hotels</h4>
+                    <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="map">
+                    <img src="Images/map.png" alt="" class="f-icon">
+                    <h4 class="h-head">World Class Service</h4>
+                    <p class="s-p-a">
+                        Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
+                    </p>
+                </div>
+            </div>
+            <div class="price-tag">
+                <img class="f-icon" src="Images/price-tag.png" alt="">
+                <h4 class="h-head">Best Price Guarantee</h4>
+                <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
 
+
+        </section>
     </main>
     <footer>
 
