Sixth page Done

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus
                     ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
                     natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
-                <button id="s-p-btn" >Read More</button>
+                <button class="s-p-btn" >Read More</button>
             </div>
             <div class="image-section">
                 <img src="Images/Rectangle 4.png" alt="">
@@ -143,6 +143,22 @@
                 <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
             </div>
 
+
+        </section>
+        <section class="fifth-page"></section>
+        <section class="sixth-page">
+            <div class="s-text-sec">
+                <h1 id="six-head" class="t-s-a">A Simple Perfect Place To Get Lost</h1>
+                <p id="six-para" class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                <ul class="s-p-li">
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                </ul>
+                <button class="s-p-btn">See More</button>
+            </div>
+            <div class="s-img-sec">
+                <p class="s-i-p">Watch Our Mountain in Bangladesh</p>
+            </div>
 
         </section>
     </main>
