--- a/index.html
+++ b/index.html
@@ -65,17 +65,20 @@
         <section class="second-page">
             <div class="text-section">
                 <h1 class="t-s-a">Our Popular Tours</h1>
-                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst
                     nec nibh pellentesque.</p>
-                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at
+                <li class="s-p-a">Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam.
+                    Sociis erat at
                     .</li>
-                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse
+                <li class="s-p-a">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                    suspendisse
                     nullam.</li>
                 <li class="s-p-a"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
                 <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus
                     ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
                     natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
-                <button class="s-p-btn" >Read More</button>
+                <button class="s-p-btn">Read More</button>
             </div>
             <div class="image-section">
                 <img src="Images/Rectangle 4.png" alt="">
@@ -84,12 +87,13 @@
         <section class="third-page">
             <div class="text-div">
                 <h1 class="t-s-a">Choose Your Destination</h1>
-                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst nec nibh pellentesque.</p>
             </div>
             <div class="image-div">
                 <div class="b-b">
                     <div class="bangladesh">
-                        <p class="bang-t">Bangladesh</p> 
+                        <p class="bang-t">Bangladesh</p>
                     </div>
                     <div class="bandarban">
                         <p class="band-t">Bandarban</p>
@@ -121,26 +125,31 @@
                 <h1 class="t-s-a">
                     Why Choose Us
                 </h1>
-                <p id="w-c-u-p" class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p id="w-c-u-p" class="s-p-a">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                    sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
             <div class="hotel-map">
                 <div class="hotel">
                     <img class="f-icon" src="Images/hotel.png" alt="">
                     <h4 class="h-head">Handpicked Hotels</h4>
-                    <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                        Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                    </p>
                 </div>
                 <div class="map">
                     <img src="Images/map.png" alt="" class="f-icon">
                     <h4 class="h-head">World Class Service</h4>
                     <p class="s-p-a">
-                        Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
+                        Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
                     </p>
                 </div>
             </div>
             <div class="price-tag">
                 <img class="f-icon" src="Images/price-tag.png" alt="">
                 <h4 class="h-head">Best Price Guarantee</h4>
-                <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                <p class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
+                    commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
             </div>
 
 
@@ -149,10 +158,13 @@
         <section class="sixth-page">
             <div class="s-text-sec">
                 <h1 id="six-head" class="t-s-a">A Simple Perfect Place To Get Lost</h1>
-                <p id="six-para" class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                <p id="six-para" class="s-p-a">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                    amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
                 <ul class="s-p-li">
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
                 </ul>
                 <button class="s-p-btn">See More</button>
             </div>
@@ -161,9 +173,37 @@
             </div>
 
         </section>
+        <section class="seventh-page">
+            <div class="form">
+                <h4 id="form-head" class="h-head">Newsletter</h4>
+                <p id="form-p" class="s-p-a">Get your daily dose of travel news & tips. Sign up today!</p>
+                <div class="inp-sec">
+                    <input class="inp-n-e" type="text" placeholder="Enter your name">
+                    <input class="inp-n-e" type="email" name="" id="" placeholder="Enter your email">
+                    <button id="sub-btn" class="btn-primary">Subscribe</button>
+                </div>
+            </div>
+            <div class="sev-img">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <div id="offer" class="btn-primary">
+                    <p id="off-p">Travel.com</p>
+                    <h3 id="save-off">Save up to 70%</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <section>
+            <div id="foot" class="left">
+                <img class="nav-img" src="Images/Group 40071 (2).png" alt="">
+                <h1 class="left-a">Hero <span style="color: var(--pri-co);">Travel</span>
+                </h1>
+            </div>
+            <p id="foot-p" class="s-p-a">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+            <img class="foot-img" src="Images/Social.jpg" alt="">
+            <hr>
+            <p class="foot-l-p">2017, All Rights Reserved.</p>
+        </section>
     </footer>
 </body>
 
